ureport（报表）设计器预览问题